# autod

./: Cargo.toml  README.md  build.rs  build.rs.bk
comp/: _autod
src/: calendar.rs  cli.rs  main  main.rs
